--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY=your-openai-api-key-here
 VITE_HOST=127.0.0.1
-SUNO_API_KEY=1b411cc43ac8f6c97c166c6a58cb91c6
+SUNO_API_KEY=your-suno-api-key-here
 SUNO_CALLBACK_URL= https://lytic-geognostical-tressie.ngrok-free.dev/api/suno/callback
 DATABASE_URL=postgresql://neondb_owner:npg_tHSu4cbd3OLF@ep-damp-salad-agphyiea-pooler.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+NODE_ENV=production
