Changed env and Suno

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 OPENAI_API_KEY=your-openai-api-key-here
 VITE_HOST=127.0.0.1
 SUNO_API_KEY=your-suno-api-key-here
-SUNO_CALLBACK_URL= https://lytic-geognostical-tressie.ngrok-free.dev/api/suno/callback
+SUNO_CALLBACK_URL= https://edusong-production.up.railway.app/api/suno/callback
 DATABASE_URL=postgresql://neondb_owner:npg_tHSu4cbd3OLF@ep-damp-salad-agphyiea-pooler.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 NODE_ENV=production
